name:                ghcjs-react-router
version:             0.1.0.0
synopsis:            React router binding
license:             BSD3
author:              Ross MacLeod
copyright:           2016 Ross MacLeod
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag development
  description:         Use unminified React sources with warnings and extended validations enabled
  manual:              False
  default:             False

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror
  exposed-modules:     React.Router
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
                     , ghcjs-react
                     , transformers
  default-language:    Haskell2010
  default-extensions:  NamedFieldPuns
                     , OverloadedStrings
                     , RankNTypes
                     , RecordWildCards
                     , LambdaCase

--  if flag(development)
--    js-sources: js/ReactRouter.js
--  if !flag(development)
--    js-sources: js/ReactRouter.min.js
