name:                example
version:             0.1.0.0
synopsis:            React router binding example
license:             BSD3
author:              Ross MacLeod
copyright:           2016 Ross MacLeod
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable example
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
                     , ghcjs-dom
                     , ghcjs-react
                     , ghcjs-react-router
                     , mtl
                     , transformers
  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                     , NamedFieldPuns
                     , OverloadedStrings
                     , RankNTypes
                     , RecordWildCards
                     , TemplateHaskell
                     , LambdaCase
